refactor in tests (build.gradle)