@@ -35,8 +35,27 @@ tasks.named('test') {
 test {
     testLogging {
         events "PASSED", "SKIPPED", "FAILED"
+        exceptionFormat "FULL"
+        showExceptions true
+        showCauses true
+        showStackTraces true
+        afterSuite { desc, result ->
+            if (!desc.parent) { // will match the outermost suite
+                println()
+                println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            }
+        }
+    }
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    reports {
+        junitXml.required = false
+    }
+    doLast {
+        println()
+        println("HTML report generated: " + reports.html.entryPoint)
     }
 }
+
 
 tasks.withType(JavaCompile).configureEach {
     options.deprecation = true
